--- a/style.css
+++ b/style.css
@@ -46,3 +46,27 @@ pre {
   height: 400px;
   border: 1px solid lightgray;
 }
+
+@media (min-width: 1200px) {
+  .container {
+    min-width: 1365px;
+  }
+}
+
+
+.nodes-card,.edges-card,.dijkstra-card{
+    margin-bottom: 20px;
+}
+
+#mynetwork {
+  position: absolute;
+  top: 50%; left: 50%;
+  transform: translate(-50%,-50%);
+  height: 70%;
+  margin-left: 30px;
+}
+
+.table tr th{
+  font-weight: bold;
+  color: #880E4F;
+}
